Fixed compiler warnings of different kind